@@ -50,7 +50,6 @@ public:
   std::set<utf8> exclude_patterns;
   std::vector<utf8> extra_rcfiles;
   path_set restrictions;
-  file_path relative_directory;
   bool found_working_copy;
   long depth;
   long last;
