@@ -1,5 +1,12 @@
 2005-08-24  Nathaniel Smith  <njs@pobox.com>
 
+	* paths.cc (find_and_go_to_working_copy): Implement.
+	* app_state.cc (allow_working_copy): Adjust accordingly.
+	(relative_directory): Remove.
+	* file_io.cc (find_working_copy): Remove.
+
+2005-08-24  Nathaniel Smith  <njs@pobox.com>
+
 	* paths.cc (save_initial_path): Update for previous changes.
 
 2005-08-24  Nathaniel Smith  <njs@pobox.com>
